# ComputationalModels_IOC

./: .gitignore  FourDofArm.py  README.md
1994_Shadmehr/: README.md  Shadmehr1994.md  Shadmher1994.py  TwoDLArm_func.py
2002_Vetter/: FourDLArm_func.py  QP_solver.py  README.md  Vetter2002_redundancy.py
2022_Colombel/: Colombel2022.py  README.md
2024_Becanovic/: Becanovic_2024 mydata.py  Becanovic_2024_4dof.py  Becanovic_2024_Arm.py  Becanovic_2024_func.py  Becanovic_2024_func3D.py  Becanovic_2024_plot3D.py  README.md  pyproject.toml
2024_Becanovic/src/2024_Becanovic/: Becanovic_2024.py  Becanovic_2024_plot.py
Data/: SubjectList.ods
Data/S_376_DecreaseStrong/J1/Exposition/: dtw_distances_matrix.csv  dtw_distances_row_sums.csv
Tools/: matrix.md
img/: content
temp/: Berret_2011.py  Guigon2007.py  Guigon_2007_func.py  IOC_SingleLevel_Becanovic2024.py  IOC_mydata.py
