[project]
authors = [{name = "Oceane Dubois", email = "dubois@isir.upmc.fr"}]
dependencies = []
name = "2024_Becanovic"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
2024_becanovic = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.4,<3"
matplotlib = ">=3.10.7,<4"
casadi = ">=3.7.0,<4"
scipy = ">=1.16.3,<2"
